GnuTLS broken on win32
- Handshake fails: unexpected packet length
- Freeze (several seconds) on init
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Maintainer
Handshake failure sounds pretty much like a blocking/non-blocking issue. I suspect GnuTLS does not recognize the Winsock equivalent error of POSIX EAGAIN, and thinks there is a fatal error. If so, it is a bug within GnuTLS, which we can't fix ourselves. We could, perhaps, work around it by overloading the I/O functions (but that's not the proper fix).
As for the freeze, the description is pretty vague.
- Rémi Denis-Courmont assigned to @Courmisch
assigned to @Courmisch
- Rémi Denis-Courmont added Component::Input: network streams label
added Component::Input: network streams label
Freeze explanation:
Between
main debug: looking for tls module: 1 candidate
and
gnutls debug: GnuTLS v1.0.25 initialized
11 seconds are spent.
Between :
gnutls warning: Cannot open directory (C:\Documents and Settings\STENAC\Application Data/vlc/ssl/private) : No such file or directory
and
gnutls warning: Cannot open directory (C:\Documents and Settings\STENAC\Application Data/vlc/ssl/private) : No such file or directory
,there are another 5 seconds
- zorglub unassigned @Courmisch
unassigned @Courmisch
- zorglub added Component::Build system: Contribs label and removed Component::Input: network streams label
added Component::Build system: Contribs label and removed Component::Input: network streams label
- Maintainer
There is only one call of the procedure that tries to open ssl/private per client session. That doesn't make sense.
Full debug
access_http debug: http: server='www.via.ecp.fr' port=443 file='(null) access_http debug: proxy 172.21.100.55:8080 main debug: net: connecting to 172.21.100.55 port 8080 main debug: connection in progress main debug: looking for tls module: 1 candidate gnutls debug: GnuTLS v1.0.25 initialized main debug: using tls module "gnutls" main debug: TLS/SSL provider initialized gnutls warning: Cannot open directory (C:\Documents and Settings\STENAC\Application Data/vlc/ssl/private) : No such file or directory gnutls error: TLS handshake failed : A TLS packet with unexpected length was received. main error: TLS/SSL session handshake error gnutls debug: GnuTLS deinitialized main debug: removing module "gnutls" main debug: TLS/SSL provider deinitialized access_http error: cannot establish HTTP/TLS session
I haven't tested without proxy yet, but the user who first reported it didn't use one
- zorglub changed milestone to %0.8.5-test3
changed milestone to %0.8.5-test3
- Maintainer
(In [14658]) Add extra Win32-specific debug (refs #538 (closed))
- Maintainer
Please verify freeze time without proxy.
- Maintainer
Freeze time verified myself.
Winsock reports WSAEWOULDBLOCK upon return from the freeze, so it seems I was right.
- Rémi Denis-Courmont assigned to @Courmisch
assigned to @Courmisch
- Maintainer
Reportedly fixed with contrib patch.
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed