Add extra Win32-specific debug (refs #538)